--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,23 +6,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/style.css" type='text/css'>
-    <link rel="shortcut icon" href="favicon.ico">
-    <title>My Memos</title>
-    
- </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary text-light p-3">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/memos">My Memos</a>
-  </div>
-</nav>
-<div class="container-sm m-3">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <title>My Memos</title>   
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary text-light p-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/memos">My Memos</a>
+      </div>
+    </nav>
+    <div class="container-sm m-3">
       <%= yield %>
-</div>   
+    </div>   
     <footer class="bg-secondary text-center text-light p-2 mt-3">
-      (c) paru 2021/07
+      &copy; paru 2021/07
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
